--- a/stylehome.css
+++ b/stylehome.css
@@ -1,5 +1,10 @@
 body {
-  background-color: #000;
+  background: #1f1f1f;
+  text-align: center;
+  display: grid;
+  align-items: center;
+  justify-items: center;
+  min-height: 95vh;
 }
 
 h1 {
@@ -8,7 +13,6 @@ h1 {
   font-size: 64px;
   font-weight: bold;
   text-align: center;
-  margin-top: 200px;
 }
 
 p {
@@ -16,168 +20,28 @@ p {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: 20px;
   text-align: center;
-  margin-top: 50px;
 }
 
-h4 {
-  color: red;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: 30px;
-  font-weight: bold;
-  text-align: center;
-  margin-top: 50px;
+canvas {
+  width: 512px;
+  height: 512px;
 }
 
-.sound-icon {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+#canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1; /* Ensure canvas is behind text */
 }
 
-.sound-wave {
-  width: 250px;
-  height: 100px;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-.sound-wave .bar {
-  display: block;
-  width: 2px;
-  margin-right: 1px;
-  height: 90px;
-  background: white;
-  animation: sound 0ms -800ms linear infinite alternate;
-  transition: height 0.8s;
-}
-
-.sound-wave .bar2 {
-  display: block;
-  width: 2px;
-  margin-right: 1px;
-  height: 120px;
-  background: white;
-  animation: sound2 0ms -800ms linear infinite alternate;
-  transition: height 0.8s;
-}
-
-@keyframes sound {
-  0% {
-    opacity: 0.35;
-    height: 6px;
-  }
-  100% {
-    opacity: 1;
-    height: 46px;
-  }
-}
-
-@keyframes sound2 {
-  0% {
-    opacity: 0.35;
-    height: 6px;
-  }
-  100% {
-    opacity: 1;
-    height: 120px;
-  }
-}
-.bar:nth-child(1) {
-  height: 2px;
-  animation-duration: 474ms;
-}
-
-.bar:nth-child(2) {
-  height: 10px;
-  animation-duration: 433ms;
-}
-
-.bar:nth-child(3) {
-  height: 18px;
-  animation-duration: 407ms;
-}
-
-.bar:nth-child(4) {
-  height: 26px;
-  animation-duration: 458ms;
-}
-
-.bar:nth-child(5) {
-  height: 30px;
-  animation-duration: 400ms;
-}
-
-.bar:nth-child(6) {
-  height: 32px;
-  animation-duration: 427ms;
-}
-
-.bar:nth-child(7) {
-  height: 34px;
-  animation-duration: 441ms;
-}
-
-.bar:nth-child(8) {
-  height: 36px;
-  animation-duration: 419ms;
-}
-
-.bar:nth-child(9) {
-  height: 40px;
-  animation-duration: 487ms;
-}
-
-.bar:nth-child(10) {
-  height: 46px;
-  animation-duration: 442ms;
-}
-
-.bar:nth-child(11) {
-  height: 2px;
-  animation-duration: 474ms;
-}
-
-.bar:nth-child(12) {
-  height: 10px;
-  animation-duration: 433ms;
-}
-
-.bar:nth-child(13) {
-  height: 18px;
-  animation-duration: 407ms;
-}
-
-.bar:nth-child(14) {
-  height: 26px;
-  animation-duration: 458ms;
-}
-
-.bar:nth-child(15) {
-  height: 30px;
-  animation-duration: 400ms;
-}
-
-.bar:nth-child(16) {
-  height: 32px;
-  animation-duration: 427ms;
-}
-
-.bar:nth-child(17) {
-  height: 34px;
-  animation-duration: 441ms;
-}
-
-.bar:nth-child(18) {
-  height: 36px;
-  animation-duration: 419ms;
-}
-
-.bar:nth-child(19) {
-  height: 40px;
-  animation-duration: 487ms;
-}
-
-.bar:nth-child(20) {
-  height: 46px;
-  animation-duration: 442ms;
+#overlayText {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2; /* Ensure text is above canvas */
+  font-size: 16px;
+  color: white;
+  font-family: Arial, sans-serif;
+  text-align: center; /* Center text horizontally */
 }
