--- a/stylehome.css
+++ b/stylehome.css
@@ -9,9 +9,9 @@ body {
 
 h1 {
   color: white;
-  font-family: 'Times New Roman', Times, serif, 'Lucida Sans Unicode', Geneva,
-    Verdana, sans-serif;
   font-size: 64px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  text-transform: uppercase;
   font-weight: bold;
   text-align: center;
   z-index: 2;
